--- a/css/user-profile.styl
+++ b/css/user-profile.styl
@@ -1,6 +1,12 @@
 .stack > .profile
   transition: all 0.2s ease-in-out
 
+  .left
+    display: inline-block
+
+  .right
+    display: inline-block
+
   #zooniverse-default-profile
     margin-top: 20px
 
