--- a/css/user-profile.styl
+++ b/css/user-profile.styl
@@ -1,6 +1,9 @@
 .stack > .profile
   transition: all 0.2s ease-in-out
 
+  @media screen and (max-width: 768px)
+    text-align: center
+
   .left
     display: inline-block
 
