--- a/css/slider.styl
+++ b/css/slider.styl
@@ -22,8 +22,9 @@ $slider-height = 500px
   left: 0
   overflow: hidden
   width: 100%
+  max-width: 1000px
 
-  @media screen and (max-width: 950px)
+  @media screen and (max-width: 1000px)
     padding-bottom: 200px !important
 
   > #back, > #forward
@@ -77,14 +78,28 @@ $slider-height = 500px
       display: flex
       align-items: center
       justify-content: space-around
+      flex-wrap: wrap
+      width: 100%
+      max-width: 1000px
+
+      @media screen and (max-width: 850px)
+        flex-direction: column
+        display: block
 
     .left
       width: 40%
+
+      @media screen and (max-width: 850px)
+        display: block
+        width: 100%
 
     .details
       width: 90px
       margin-top: 50%
       margin-left: 50px
+
+      @media screen and (max-width: 850px)
+        margin: 0 0 0 100px
 
     .right
       width: 55%
@@ -92,11 +107,24 @@ $slider-height = 500px
       .third.header
         margin-top: 120px
 
+        @media screen and (max-width: 850px)
+          margin: 0
+
+      @media screen and (max-width: 850px)
+        display: block
+        width: 100%
+        text-align: center
+        z-index: 1
+        position: relative
+        margin: 0
+
     p
       font-size: 16px
       font-weight: 700
       line-height: 1.5em
       margin-bottom: 40px
+      width: 100%
+      display: inline-block
 
     .image-container
       order: 2
@@ -118,6 +146,11 @@ $slider-height = 500px
         &.worm
           left: 165px
 
+        &.mobile-center
+          @media screen and (max-width: 850px)
+            left: 80px
+            top: 80%
+
   #classify-button
     order: 1
     margin: 10px 0
@@ -131,7 +164,7 @@ $slider-height = 500px
     left: 45%
     bottom: 22%
 
-    @media screen and (max-width: 950px)
+    @media screen and (max-width: 1000px)
       position: relative
       max-width: 700px
       width: 100%
@@ -144,7 +177,7 @@ $slider-height = 500px
     padding-top: 8px
     order: 2
 
-    @media screen and (max-width: 950px)
+    @media screen and (max-width: 1000px)
       padding: 10px
 
     figure
