--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -49,16 +49,15 @@
     div
       order: 2
 
-  // > div
-  //     box-sizing: border-box
-  //     display: inline-block
-  //     vertical-align: top
-
   .left
     width: 39%
 
   .right
     width: 59%
+
+    @media screen and (max-width: 768px)
+      width: 98%
+      margin: 0 auto
 
   .full-width
     width: 98%
