--- a/css/slider.styl
+++ b/css/slider.styl
@@ -27,6 +27,9 @@ $slider-height = 500px
   @media screen and (max-width: 1000px)
     padding-bottom: 200px !important
 
+  @media screen and (max-width: 400px)
+    padding-bottom: 225px !important
+
   > #back, > #forward
     appearance: none
     background: none
@@ -150,6 +153,8 @@ $slider-height = 500px
           @media screen and (max-width: 850px)
             left: 80px
             top: 80%
+          @media screen and (max-width: 400px)
+            left: 40px
 
   #classify-button
     order: 1
