--- a/css/layout.styl
+++ b/css/layout.styl
@@ -114,11 +114,14 @@ body
   .logo
     float: left
 
+    @media screen and (max-width: 1000px)
+      margin: 0 20px
+
   .hamburger-menu
     font-size: 20px
     display: none
     cursor: pointer
-    margin: 0 10px
+    margin: 0 20px
     float: right
     vertical-align: top
 
