--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -5,12 +5,13 @@
 
   p
     font-weight: normal
-    text-shadow: initial
+    text-shadow: none
 
   h1
     font-size: 30px
     font-weight: bold
     margin-bottom: 20px
+    text-shadow: none
 
     @media screen and (max-width: 1000px)
       padding: 0 10px
@@ -19,6 +20,7 @@
     font-size: 18px
     font-weight: bold
     margin-top: 0
+    text-shadow: none
 
   div.section
     padding: 0 0 20px 0
