--- a/css/slide-tutorial.styl
+++ b/css/slide-tutorial.styl
@@ -30,10 +30,13 @@
       border: none
   .slide-tutorial-next-button
     @extend #small-button
+    width: 120px
     margin: 0 auto !important
-    // width: 150px
     font-size: 14px
-    -webkit-font-smoothing: antialiased
+    background: #81e007
+    padding: 0 13px
+    text-shadow: 0 1px 0 rgba(255,255,255,0.75)
+    box-shadow: 0 3px 5px 0 rgba(0,0,0,0.15), inset 0 1px 0 0 rgba(255,255,255,0.75)
   h1
     font-size: 30px
 
