--- a/css/layout.styl
+++ b/css/layout.styl
@@ -109,13 +109,13 @@ body
   text-shadow: 0 1px 1px rgba(#000, 0.5)
   max-width: 1000px
   width: 100%
-  height: 25px
+  height: 100%
 
   .logo
     float: left
 
     @media screen and (max-width: 1000px)
-      margin: 0 20px
+      margin: 0 0 0 20px
 
   .hamburger-menu
     font-size: 20px
@@ -129,7 +129,7 @@ body
       display: initial
 
   ul
-    margin: 0 auto 220px
+    margin: 0 auto
     text-align: right
     max-width: 1000px
     box-sizing: border-box
