--- a/css/slide-tutorial.styl
+++ b/css/slide-tutorial.styl
@@ -1,7 +1,7 @@
 .slide-tutorial
   z-index: 100
   color: #003143
-  // text-shadow: initial
+  background: rgba(0, 137, 200, 0.8)
   button
     cursor: pointer
   .slide-tutorial-container
@@ -36,7 +36,7 @@
     background: #81e007
     padding: 0 13px
     text-shadow: 0 1px 0 rgba(255,255,255,0.75)
-    box-shadow: 0 3px 5px 0 rgba(0,0,0,0.15), inset 0 1px 0 0 rgba(255,255,255,0.75)
+    box-shadow: none
   h1
     font-size: 30px
 
