IE fixes and other minor updates

--- a/css/common.styl
+++ b/css/common.styl
@@ -82,3 +82,8 @@ p
 h1, h2, h3
   margin: 1.2em 0 0.2em 0
   text-shadow: 0 1px 0 #0089c8
+
+
+.zooniverse-dialog .underlay .container .dialog
+  @media screen and (max-width: 400px)
+    max-width: 66%
