--- a/css/slider.styl
+++ b/css/slider.styl
@@ -86,10 +86,10 @@ $slider-height = 500px
     .container
       @extends #site-container
       position: relative
+      display: -ms-flexbox
       display: flex
       align-items: center
       justify-content: space-around
-      flex-wrap: wrap
       width: 100%
       max-width: 1000px
 
