--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -27,6 +27,7 @@
     min-height: 150px
     position: relative
     display: flex
+    display: -ms-flexbox
     justify-content: space-around
     margin: 0 0 10px 0
     border-radius: 6px
@@ -50,6 +51,7 @@
 
     div
       order: 2
+      max-width: 750px
 
   .left
     width: 39%
