--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -350,7 +350,8 @@
     padding: 17px 24px
     position: relative
     text-shadow: 0 1px 0 #fff
-    width: 360px
+    max-width: 360px
+    width: 100%
 
     @media screen and (max-width: 960px)
       margin: 0 auto
@@ -368,7 +369,7 @@
       z-index: 1
 
       @media screen and (max-width: 960px)
-        left: 160px
+        left: 45%
         top: -30px
         border-left: 15px solid transparent
         border-right: 15px solid transparent
@@ -396,6 +397,17 @@
 
     figure
       display: inline-block
+      width: 100%
+      max-width: 360px
+      box-sizing: border-box
+
+      @media screen and (max-width: 400px)
+        margin: 0
+        padding: 10px
+
+      img, video
+        width: 100%
+        max-width: 360px
 
       figcaption
         font-size: 12px
@@ -406,6 +418,11 @@
       margin: 1em auto
       font-weight: normal
       text-shadow: initial
+      box-sizing: border-box
+
+      @media screen and (max-width: 400px)
+        margin: 0
+        padding: 10px
 
     .scroll-up
       font-size: 20px
