Updated styles for guide

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -392,8 +392,14 @@
     margin: 20px 10px 0
     text-align: center
     color: #014e6a
-    background-color: #fff
+    background-color: #ecf3f8
     border-radius: 6px
+
+    section
+      padding: 20px 0
+
+      &:nth-child(even)
+        background: #fff
 
     figure
       display: inline-block
@@ -412,6 +418,9 @@
       figcaption
         font-size: 12px
 
+      a
+        color: #81e007
+
     p
       max-width: 600px
       width: 100%
@@ -428,6 +437,8 @@
       font-size: 20px
       padding: 30px 0
       cursor: pointer
+      background: #fff
+      border-radius: 6px
 
       img
         background-color: #81e007
