Added more images/gifs and clean up

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -98,9 +98,6 @@ body
   position: relative
   z-index: 1
 
-.add-margin
-  margin-bottom: 240px !important // hack-y fix for mobile nav toggle
-
 #app > .header
   @extends #site-container
   color: white
@@ -115,7 +112,7 @@ body
     float: left
 
     @media screen and (max-width: 1000px)
-      margin: 0 0 0 20px
+      margin: 5px 0 0 20px
 
   .hamburger-menu
     font-size: 20px
