--- a/css/slider.styl
+++ b/css/slider.styl
@@ -22,17 +22,16 @@ $slider-height = 500px
   left: 0
   overflow: hidden
   width: 100%
-  max-width: 1000px
 
   @media screen and (max-width: 1000px)
     padding-bottom: 200px !important
 
-  @media screen and (max-width: 850px)
+  @media screen and (max-width: 999px)
     height: 100%
     padding: 0 !important
 
   .caroufredsel_wrapper
-    @media screen and (max-width: 850px)
+    @media screen and (max-width: 999px)
       display: none !important
 
   > #back, > #forward
@@ -51,7 +50,7 @@ $slider-height = 500px
     z-index: 1
     cursor: pointer
 
-    @media screen and (max-width: 850px)
+    @media screen and (max-width: 999px)
       display: none !important
 
     &:hover
@@ -89,45 +88,24 @@ $slider-height = 500px
       display: -ms-flexbox
       display: flex
       align-items: center
-      justify-content: space-around
-      width: 100%
-      max-width: 1000px
-
-      @media screen and (max-width: 850px)
-        flex-direction: column
-        display: block
+      justify-content: space-between
 
     .left
-      width: 40%
-
-      @media screen and (max-width: 850px)
-        display: block
-        width: 100%
+      width: 42%
 
     .details
       width: 90px
-      margin-top: 50%
+      margin-top: 200px
       margin-left: 50px
 
-      @media screen and (max-width: 850px)
-        margin: 0 0 0 100px
-
     .right
-      width: 55%
+      width: 57%
+
+      p
+        width: 85%
 
       .third.header
         margin-top: 120px
-
-        @media screen and (max-width: 850px)
-          margin: 0
-
-      @media screen and (max-width: 850px)
-        display: block
-        width: 100%
-        text-align: center
-        z-index: 1
-        position: relative
-        margin: 0
 
     p
       font-size: 16px
@@ -139,7 +117,6 @@ $slider-height = 500px
 
     .image-container
       order: 2
-      align-self: center
 
       img
         left: 150px
@@ -157,25 +134,15 @@ $slider-height = 500px
         &.worm
           left: 165px
 
-        &.mobile-center
-          @media screen and (max-width: 850px)
-            left: 80px
-            top: 80%
-          @media screen and (max-width: 400px)
-            left: 40px
-
-  #classify-button
-    order: 1
-    margin: 10px 0
-
   .static-container
     width: 100%
-    max-width: 1000px
+    max-width: 800px
     padding: 0 20px
     box-sizing: border-box
     display: none
+    margin: 0 auto
 
-    @media screen and (max-width: 850px)
+    @media screen and (max-width: 999px)
       display: flex
 
     @media screen and (max-width: 768px)
@@ -200,14 +167,11 @@ $slider-height = 500px
 
   .sponsors-container
     @extends #site-container
-    display: flex
-    flex-direction: column
-    position: absolute
-    width: 500px
-    left: 45%
-    bottom: 22%
+    position: relative
 
     @media screen and (max-width: 1000px)
+      display: flex
+      flex-direction: column
       position: relative
       max-width: 700px
       width: 100%
@@ -215,13 +179,31 @@ $slider-height = 500px
       bottom: initial
       align-items: center
 
+  #classify-button
+    bottom: 180px
+    left: 42%
+    position: absolute
+
+    @media screen and (max-width: 1000px)
+      order: 1
+      margin: 10px 0
+      position: relative
+      left: initial
+      bottom: initial
+
   .sponsors
     border-top: 1px solid rgba(#fff, 0.2)
     padding-top: 8px
-    order: 2
+    bottom: 79px
+    left: 42%
+    position: absolute
 
     @media screen and (max-width: 1000px)
+      position: relative
+      left: initial
+      bottom: initial
       padding: 10px
+      order: 2
 
     figure
       margin: 0
