Fix for FF video load and updates to video styling for #36, #37, #38, and #39

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -52,7 +52,7 @@ body
         margin: 0
         width: 100%
         &:hover
-          color: #81e007
+          color: #052533
 
         .zooniverse-logo
           max-height: 100px
