--- a/css/slide-tutorial.styl
+++ b/css/slide-tutorial.styl
@@ -13,9 +13,11 @@
       min-height: 160px
       h1
         text-shadow: initial
+        text-align: center
       p
         text-shadow: initial
         font-weight: 300
+        margin: 20px !important
     .slide-tutorial-dots
       .slide-tutorial-dot
         background: #01bbfe
