--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -116,14 +116,46 @@
         position: absolute
         z-index: 1
 
+        &.top, &.right, &.bottom, &.left
+          border: 6px solid #000
+          box-shadow: inset 0 0 10px 1px rgba(#000, 0.7)
+          box-sizing: border-box
+
+        &.top, &.bottom
+          height: 0
+          width: 100%
+
+        &.left, &.right
+          height: 100%
+          width: 0
+
+        &.top
+          top: 0
+
+        &.bottom
+          bottom: 0
+
+        &.left
+          left: 0
+
+        &.right
+          right: 0
+          padding: 0
+
       #worm-video
         position: relative
 
         > .vjs-big-play-button
           display: none
 
+        .vjs-loading-spinner
+          top: 10%
+          left: 7.5%
+
         > .vjs-control-bar
-          bottom: 0
+          left: 6px
+          right: 6px
+          bottom: 5px
           box-sizing: border-box
           color: #fff
           font-size: 14px
@@ -411,12 +443,79 @@
         margin: 0
         padding: 10px
 
-      img, video
+      img, video, object
         width: 100%
         max-width: 360px
+        max-height: 270px
 
-      figcaption
-        font-size: 12px
+      video, object
+        border: 6px solid #000
+        box-shadow: inset 0 0 10px 1px rgba(#000, 0.7)
+        box-sizing: border-box
+
+    .video-container
+      position: relative
+      width: 100%
+      max-width: 360px
+      max-height: 270px
+      border: 8px solid black
+      z-index: 0
+
+      .overlay
+        background: rgba(#000, 0.0)
+        cursor: pointer
+        display: block
+        height: 100%
+        position: absolute
+        width: 100%
+        z-index: 1
+        border: 6px solid #000
+        box-shadow: inset 0 0 10px 1px rgba(#000, 0.7)
+        box-sizing: border-box
+
+      .vjs-fullscreen
+        padding-top: 0px
+
+      .video-js
+        padding-top: 75.25%
+
+      #guide-video-one, #guide-video-two
+        position: relative
+
+        > .vjs-big-play-button
+          display: none
+
+        > .vjs-control-bar
+          left: 6px
+          right: 6px
+          bottom: 5px
+          box-sizing: border-box
+          color: #fff
+          font-size: 14px
+          line-height: 2.5em
+          padding: 0 18px
+
+          > .vjs-fullscreen-control, >.vjs-mute-control,
+          > .vjs-volume-control, > .vjs-play-control
+            display: none
+
+          > .vjs-time-controls, > .vjs-time-divider
+            line-height: 2.2em
+
+
+      .vjs-poster
+        max-width: 360px
+        max-height: 250px
+        width: 100%
+        height: 100%
+        position: absolute
+        left: 0
+        top: 0
+
+
+    figcaption
+      font-size: 12px
+      padding: 5px
 
       a
         color: #81e007
