--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -447,10 +447,6 @@
         width: 100%
         max-width: 360px
         max-height: 270px
-
-      video, object
-        border: 6px solid #000
-        box-shadow: inset 0 0 10px 1px rgba(#000, 0.7)
         box-sizing: border-box
 
     .video-container
@@ -458,8 +454,11 @@
       width: 100%
       max-width: 360px
       max-height: 270px
-      border: 8px solid black
       z-index: 0
+
+      @media screen and (max-width: 768px)
+        margin-left: 0
+        margin-right: 0
 
       .overlay
         background: rgba(#000, 0.0)
@@ -469,8 +468,6 @@
         position: absolute
         width: 100%
         z-index: 1
-        border: 6px solid #000
-        box-shadow: inset 0 0 10px 1px rgba(#000, 0.7)
         box-sizing: border-box
 
       .vjs-fullscreen
@@ -486,9 +483,7 @@
           display: none
 
         > .vjs-control-bar
-          left: 6px
-          right: 6px
-          bottom: 5px
+          bottom: 0
           box-sizing: border-box
           color: #fff
           font-size: 14px
@@ -528,9 +523,11 @@
       text-shadow: initial
       box-sizing: border-box
 
+      @media screen and (max-width: 768px)
+        padding: 10px
+
       @media screen and (max-width: 400px)
         margin: 0
-        padding: 10px
 
     .scroll-up
       font-size: 20px
