Firefox fix for #42

--- a/css/slide-tutorial.styl
+++ b/css/slide-tutorial.styl
@@ -18,6 +18,8 @@
         text-shadow: initial
         font-weight: 300
         margin: 20px !important
+      strong
+        font-weight: 700
     .slide-tutorial-dots
       .slide-tutorial-dot
         background: #01bbfe
