--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -45,6 +45,9 @@
         box-shadow: 0 0 10px 1px rgba(#000, 0.3)
         width: 150px
 
+      .no-shadow
+        box-shadow: initial
+
       @media screen and (max-width: 768px)
         margin: 20px 0
 
@@ -77,4 +80,31 @@
 
     a
       color: #81e007
+
+
+  .about-section
+    min-height: 220px
+
+    @media screen and (max-width: 768px)
+      text-align: center
+
+    h2
+      margin 1.2em 0 0.5em 0
+      text-shadow: none
+
+    .about-figure
+      display: inline-block
+      margin: 0 20px 20px 0
+      float: left
+
+      @media screen and (max-width: 768px)
+        display: inline-block
+        float: none
+        margin: 0 0 20px 0
+
+      img
+        width: 200px
+
+      figcaption
+        font-size: 10px
 
