--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -42,15 +42,17 @@
       min-width: 150px
 
       img
-        box-shadow: 0 0 10px 1px rgba(#000, 0.3)
         width: 150px
 
-      .no-shadow
-        box-shadow: initial
+      img[src$='svg']
+        width: 100%
+        max-width: 150px
 
       @media screen and (max-width: 768px)
         margin: 20px 0
 
+    .shadow
+      box-shadow: 0 0 10px 1px rgba(#000, 0.3)
 
     div
       order: 2
@@ -103,7 +105,7 @@
         margin: 0 0 20px 0
 
       img
-        width: 200px
+        max-width: 200px
 
       figcaption
         font-size: 10px
