header fix for #40

--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -87,6 +87,9 @@
   .about-section
     min-height: 220px
 
+    &:first-child
+      min-height: 250px
+
     @media screen and (max-width: 768px)
       text-align: center
 
