--- a/css/sub-page.styl
+++ b/css/sub-page.styl
@@ -88,7 +88,17 @@
     min-height: 220px
 
     &:first-child
-      min-height: 250px
+      min-height: 255px
+
+    &:nth-of-type(even)
+      figure
+        float: right
+        margin: 0 0 10px 20px
+
+        @media screen and (max-width: 768px)
+          display: inline-block
+          float: none
+          margin: 0 0 20px 0
 
     @media screen and (max-width: 768px)
       text-align: center
@@ -99,7 +109,7 @@
 
     .about-figure
       display: inline-block
-      margin: 0 20px 20px 0
+      margin: 0 20px 10px 0
       float: left
 
       @media screen and (max-width: 768px)
@@ -112,4 +122,5 @@
 
       figcaption
         font-size: 10px
+
 
