BSA progress bar

--- a/css/common.styl
+++ b/css/common.styl
@@ -57,6 +57,10 @@ $serif = "Merriweather", "Georgia", serif
   padding: 0 10px
   text-shadow: 0 1px 0 #fff
 
+.container
+  margin: 0 auto
+  width: 1000px
+
 #site-container
   margin: 0 auto
   width: 1000px
@@ -82,7 +86,6 @@ p
 h1, h2, h3
   margin: 1.2em 0 0.2em 0
   text-shadow: 0 1px 0 #0089c8
-
 
 .zooniverse-dialog .underlay .container .dialog
   @media screen and (max-width: 400px)
