--- a/css/slider.styl
+++ b/css/slider.styl
@@ -23,6 +23,23 @@ $slider-height = 500px
   overflow: hidden
   width: 100%
 
+  .bsw-promotion
+    margin: 0 0 30px 0
+    text-align: center
+
+  .progress-bar
+    background: rgba(white, 0.3)
+    border-radius: 10px
+    margin: 0 auto
+    max-width: 600px
+
+  .current-progress
+    border-radius: 10px
+    height: 20px 
+
+  .current-progress-numbers
+    margin: 5px 0
+
   @media screen and (max-width: 1000px)
     padding-bottom: 200px !important
 
