Add BSW logo and other edits

--- a/css/common.styl
+++ b/css/common.styl
@@ -59,7 +59,7 @@ $serif = "Merriweather", "Georgia", serif
 
 .container
   margin: 0 auto
-  width: 1000px
+  max-width: 1000px
 
 #site-container
   margin: 0 auto
