Towards out-of-data message

--- a/css/common.styl
+++ b/css/common.styl
@@ -34,6 +34,7 @@ $serif = "Merriweather", "Georgia", serif
   font-weight bold
   height: 50px
   line-height: 50px
+  margin: 0 auto
   text-align: center
   text-decoration: none
   text-shadow: 0 1px 0 #fff
@@ -63,7 +64,7 @@ $serif = "Merriweather", "Georgia", serif
 
 #site-container
   margin: 0 auto
-  width: 1000px
+  max-width: 1000px
 
 a
   color: #ff6
