--- a/css/main.styl
+++ b/css/main.styl
@@ -6,11 +6,11 @@
 @import "./common"
 @import "./locales"
 @import "./layout"
+@import "./home"
 @import "./tutorial"
 @import "./classifier"
 @import "./video.css"
 @import "./sub-page"
 @import "./slide-tutorial"
 
-@import "./slider"
 @import "./user-profile"
